<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35">

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_company_information_name"
            />

        <EditText
            android:id="@+id/edText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/bg_frame_radius_5_stroke_1"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/setting_company_value1"
            android:textColor="@color/black"
            android:enabled="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35">

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_company_information_address"
            />

        <EditText
            android:id="@+id/edText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/bg_frame_radius_5_stroke_1"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/setting_company_value2"
            android:textColor="@color/black"
            android:enabled="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35">

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_company_information_phone"
            />

        <EditText
            android:id="@+id/edText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/bg_frame_radius_5_stroke_1"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/setting_company_value3"
            android:textColor="@color/black"
            android:enabled="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35">

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:text="@string/setting_company_information_website"
            />

        <EditText
            android:id="@+id/edText4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_12"
            android:background="@drawable/bg_frame_radius_5_stroke_1"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/setting_company_value4"
            android:textColor="@color/black"
            android:enabled="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>