<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/DeviceListFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.zdyb.module_diagnosis.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.zdyb.module_diagnosis.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/DeviceListFragment"
        android:name="com.zdyb.module_diagnosis.fragment.AutoScanDeviceListFragment"
        android:label="@string/device_list_fragment_label"
        tools:layout="@layout/fragment_auto_scan_device_list">

        <action
            android:id="@+id/action_DeviceListFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>