<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"

    android:minHeight="@dimen/dp_140"
    >

    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25"
        android:background="@drawable/dialog_bar_bg"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="提示"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@+id/bar"
        app:layout_constraintLeft_toLeftOf="@+id/bar"
        app:layout_constraintBottom_toBottomOf="@+id/bar"
        />

    <com.zdyb.lib_common.widget.QMUIAlphaImage
        android:id="@+id/actionButton"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@+id/bar"
        app:layout_constraintRight_toRightOf="@+id/bar"
        app:layout_constraintBottom_toBottomOf="@+id/bar"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:background="@drawable/bg_frame_radius_5_c_37bb4c"
        android:text="@string/ecu_dialog_illustrate1"
        android:layout_marginRight="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:background="@drawable/bg_frame_radius_5_c_37bb4c"
        android:text="@string/ecu_dialog_illustrate2"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:background="@drawable/bg_frame_radius_5_c_37bb4c"
        android:text="@string/ecu_dialog_illustrate3"
        android:layout_marginLeft="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:background="@drawable/bg_frame_radius_5_c_37bb4c"
        android:text="@string/ecu_dialog_illustrate4"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toTopOf="@+id/placeholder2"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        />
    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:textColor="@color/white"
        android:background="@drawable/bg_frame_radius_5_c_37bb4c"
        android:text="@string/ecu_dialog_illustrate5"
        android:layout_marginLeft="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        />


    <TextView
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_25"
        android:text="@string/enter_the_system"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancel"
        />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_25"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/confirm"
        />
    <View
        android:id="@+id/placeholder"
        android:layout_width="@dimen/dp_0_5"
        android:layout_height="@dimen/dp_25"
        android:background="@color/line_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/confirm"
        />
    <View
        android:id="@+id/placeholder2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/line_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/placeholder"
        />

</androidx.constraintlayout.widget.ConstraintLayout>